--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "github",
+  "name": "avalanche-archiver",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Daily avalanche bulletin archiver",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node tools/build.js",
+    "fetch": "node tools/fetch_daily.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "dependencies": {
-    "puppeteer": "^24.34.0"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
