Link incident bulletins to incidents and update archive
Added archived avalanche bulletin PDFs and index pages for Allgäu Alps East and Central regions. Updated incident HTML files to include links to relevant archived bulletins and fixed snow profile image paths. Modified incidents.json to include pdf_path for incidents with available bulletins. Updated workflow to fetch incident PDFs.

--- a/.github/workflows/translate_build.yml
+++ b/.github/workflows/translate_build.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Fetch Profiles
         run: node tools/process_profiles.js
 
+      - name: Fetch Incident PDFs
+        run: node tools/fetch_incident_pdfs.js
+
       - name: Build site
         run: npm run build
 
